// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`preferences: URLs of legacy extensions > given extension with both custom preference tabs and content for the default tab > when navigating to specific custom preference tab using magic string URL > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-other-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some other title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
                <div
                  class="TabSeparator"
                >
                  <div
                    class="HorizontalLine size-sm"
                  />
                </div>
                <div
                  data-preference-tab-group-test="extensions-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    <i
                      class="Icon mr-3 material focusable smallest"
                    >
                      <span
                        class="icon"
                        data-icon-name="extension"
                      >
                        extension
                      </span>
                    </i>
                    Extensions
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="some-extension"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      some-extension
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="preference-item-for-extension-some-extension-additional-page-some-preference-tab-id"
                id="preference-item-for-extension-some-extension-additional-page-some-preference-tab-id"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  Some title
                </h2>
                <div
                  data-preference-item-test="preference-item-for-extension-some-extension-item-some-preference-item-id"
                >
                  <section
                    class="small"
                    id="some-preference-item-id"
                  >
                    <div
                      class="SubTitle"
                    >
                      some-title
                       
                    </div>
                    <div
                      data-some-preference-test="some-preference-in-custom-tab"
                    />
                    <div
                      class="hint"
                    >
                      <div />
                    </div>
                  </section>
                  <hr
                    class="small"
                  />
                </div>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-9"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-9"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-9"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-9"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`preferences: URLs of legacy extensions > given extension with both custom preference tabs and content for the default tab > when navigating to unspecified custom preferences tab using magic string URL > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-other-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some other title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
                <div
                  class="TabSeparator"
                >
                  <div
                    class="HorizontalLine size-sm"
                  />
                </div>
                <div
                  data-preference-tab-group-test="extensions-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    <i
                      class="Icon mr-3 material focusable smallest"
                    >
                      <span
                        class="icon"
                        data-icon-name="extension"
                      >
                        extension
                      </span>
                    </i>
                    Extensions
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="some-extension"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      some-extension
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="preference-item-for-extension-some-extension-page"
                id="preference-item-for-extension-some-extension-page"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  some-extension preferences
                </h2>
                <div
                  data-preference-item-test="preference-item-for-extension-some-extension-item-some-preference-item-id-in-default-tab"
                >
                  <section
                    class="small"
                    id="some-preference-item-id-in-default-tab"
                  >
                    <div
                      class="SubTitle"
                    >
                      some-title-in-default-tab
                       
                    </div>
                    <div
                      data-some-preference-test="some-preference-in-default-tab"
                    />
                    <div
                      class="hint"
                    >
                      <div />
                    </div>
                  </section>
                  <hr
                    class="small"
                  />
                </div>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-12"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-12"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-12"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-12"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`preferences: URLs of legacy extensions > given extension with custom preferences and a custom preference tab > when navigating to specific custom preference tab using magic string URL > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-other-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some other title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="preference-item-for-extension-some-extension-additional-page-some-preference-tab-id"
                id="preference-item-for-extension-some-extension-additional-page-some-preference-tab-id"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  Some title
                </h2>
                <div
                  data-preference-item-test="preference-item-for-extension-some-extension-item-some-preference-item-id"
                >
                  <section
                    class="small"
                    id="some-preference-item-id"
                  >
                    <div
                      class="SubTitle"
                    >
                      some-title
                       
                    </div>
                    <div
                      data-some-preference-test="some-preference"
                    />
                    <div
                      class="hint"
                    >
                      <div />
                    </div>
                  </section>
                  <hr
                    class="small"
                  />
                </div>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-0"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-0"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-0"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-0"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`preferences: URLs of legacy extensions > given extension with custom preferences and a custom preference tab > when navigating to unspecified custom preferences tab using magic string URL > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="extension-some-extension-some-other-preference-tab-id"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Some other title
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="preference-item-for-extension-some-extension-page"
                id="preference-item-for-extension-some-extension-page"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  some-extension preferences
                </h2>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-3"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-3"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-3"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-3"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`preferences: URLs of legacy extensions > given extension with custom preferences but without a custom preference tab > when navigating to the default preference tab using magic string URL > renders 1`] = `
<body>
  <div>
    <div
      class="Notifications"
    />
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation Preferences"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="Tabs flex flex-col"
              >
                <div
                  data-preference-tab-group-test="general-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    Preferences
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="app"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      App
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="proxy"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Proxy
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="kubernetes"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Kubernetes
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="editor"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Editor
                    </div>
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="terminal"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      Terminal
                    </div>
                  </div>
                </div>
                <div
                  class="TabSeparator"
                >
                  <div
                    class="HorizontalLine size-sm"
                  />
                </div>
                <div
                  data-preference-tab-group-test="extensions-tab-group"
                >
                  <div
                    class="header flex items-center"
                  >
                    <i
                      class="Icon mr-3 material focusable smallest"
                    >
                      <span
                        class="icon"
                        data-icon-name="extension"
                      >
                        extension
                      </span>
                    </i>
                    Extensions
                  </div>
                  <div
                    class="Tab flex gap-2 items-center"
                    data-preference-tab-link-test="some-extension"
                    role="tab"
                    tabindex="0"
                  >
                    <div
                      class="label"
                    >
                      some-extension
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section
                data-preference-page-test="preference-item-for-extension-some-extension-page"
                id="preference-item-for-extension-some-extension-page"
              >
                <h2
                  data-preference-page-title-test="true"
                >
                  some-extension preferences
                </h2>
                <div
                  data-preference-item-test="preference-item-for-extension-some-extension-item-some-preference-item-id"
                >
                  <section
                    class="small"
                    id="some-preference-item-id"
                  >
                    <div
                      class="SubTitle"
                    >
                      some-title
                       
                    </div>
                    <div
                      data-some-preference-test="true"
                    />
                    <div
                      class="hint"
                    >
                      <div />
                    </div>
                  </section>
                  <hr
                    class="small"
                  />
                </div>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div
                  data-testid="close-preferences"
                >
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex flex-col"
      >
        <div
          class="HotbarItems flex flex-col"
        >
          <div
            class="HotbarCell animateDown"
            index="0"
          >
            <div
              aria-describedby="DndDescribedBy-6"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 12; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-welcome-page-entity"
                  style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
                >
                  WP
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="1"
          >
            <div
              aria-describedby="DndDescribedBy-6"
              aria-disabled="false"
              aria-roledescription="draggable"
              role="button"
              style="z-index: 11; position: absolute; opacity: 1; pointer-events: auto;"
              tabindex="0"
            >
              <div
                class="HotbarIcon contextMenuAvailable"
              >
                <div
                  class="Avatar rounded disabled avatar"
                  id="hotbarIcon-hotbar-icon-catalog-entity"
                  style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
                >
                  Ca
                </div>
              </div>
            </div>
          </div>
          <div
            class="HotbarCell animateDown"
            index="2"
          />
          <div
            class="HotbarCell animateDown"
            index="3"
          />
          <div
            class="HotbarCell animateDown"
            index="4"
          />
          <div
            class="HotbarCell animateDown"
            index="5"
          />
          <div
            class="HotbarCell animateDown"
            index="6"
          />
          <div
            class="HotbarCell animateDown"
            index="7"
          />
          <div
            class="HotbarCell animateDown"
            index="8"
          />
          <div
            class="HotbarCell animateDown"
            index="9"
          />
          <div
            class="HotbarCell animateDown"
            index="10"
          />
          <div
            class="HotbarCell animateDown"
            index="11"
          />
          <div
            id="DndDescribedBy-6"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-6"
            role="status"
            style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px); clip-path: inset(100%); white-space: nowrap;"
          />
        </div>
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              data-testid="hotbar-menu-badge-for-Default"
              id="hotbarIndex"
            >
              1
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
  </div>
</body>
`;
